--- a/FlutterLoginRegister-main/pubspec.yaml
+++ b/FlutterLoginRegister-main/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_fonts: ^5.1.0
   path_provider: ^2.1.1
   cloud_firestore: ^4.9.1
+  cached_network_image: ^3.3.1
+  flutter_svg: ^2.0.10+1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
