--- a/FlutterLoginRegister-main/pubspec.yaml
+++ b/FlutterLoginRegister-main/pubspec.yaml
@@ -62,6 +62,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/logo.png
+    - assets/google_logo.png
+    
 
 
   # The following line ensures that the Material Icons font is
